--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
         <a class="navbar-brand" href="#">Backup Kudeatzailea</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
+        <div id="divNavBar"></div>
         <!--<ul class="nav navbar-nav navbar-right">-->
           <!--<li><a href="#">Dashboard</a></li>-->
           <!--<li><a href="#">Settings</a></li>-->
@@ -65,7 +66,7 @@
         </div>
 
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 className="page-header">Dashboard</h1>
+          <h1 className="page-header">Seguratun Kopia kudeatzailea</h1>
           <div id="root"></div>
 
         </div>
