--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 
     <title>Pasaia Backup Manager</title>
   </head>
-  <body>
+  <body id="main">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
